--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 				<div class="leftpanel">
 					<h2>Danh mục tin</h2>
 					<ul>
-						<li><a href="danhmuc.html">Thời sự</a></li>
-						<li><a href="danhmuc.html">Góc nhìn</a></li>
-						<li><a href="danhmuc.html">Thế giới</a></li>
-						<li><a href="danhmuc.html">Kinh doanh</a></li>
+						<li><a href="danhmuc.html">Toàn cảnh Nhật Bản</a></li>
+						<li><a href="danhmuc.html">Tin tức Việt - Nhật</a></li>
+						<li><a href="danhmuc.html">Tin tức giải trí</a></li>
+						<li><a href="danhmuc.html">Du học Nhật Bản</a></li>
 					</ul>
 				</div>
 				<div class="rightpanel">
