--- a/danhmuc.html
+++ b/danhmuc.html
@@ -25,10 +25,10 @@
 				<div class="leftpanel">
 					<h2>Danh mục tin</h2>
 					<ul>
-						<li><a href="danhmuc.html">Thời sự</a></li>
-						<li><a href="danhmuc.html">Góc nhìn</a></li>
-						<li><a href="danhmuc.html">Thế giới</a></li>
-						<li><a href="danhmuc.html">Kinh doanh</a></li>
+						<li><a href="danhmuc.html">Toàn cảnh Nhật Bản</a></li>
+						<li><a href="danhmuc.html">Tin tức Việt - Nhật</a></li>
+						<li><a href="danhmuc.html">Tin tức giải trí</a></li>
+						<li><a href="danhmuc.html">Du học Nhật Bản</a></li>
 					</ul>
 				</div>
 				<div class="rightpanel">
@@ -38,58 +38,56 @@
 							<ul>
 								<li>
 									<h2>
-										<a href="" title="">Trung Quốc điều thêm 17 tàu đến khu vực giàn khoan</a>
+										<a href="chitiet.html" title="">Đền thiêng Sefa Utaki ở Okinawa</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
-										<p>Để bảo vệ giàn khoan, Trung Quốc đã điều thêm 17 tàu các loại so với hôm
-											trước, sẵn sàng đâm va vào tàu Việt Nam.</p>
+										<a href="chitiet.html" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
+										<p>Sefa Utaki nằm ở phía đông nam của đảo Okinawa Honto , khoảng 15 km từ Naha.
+											Seifa-utaki là một đền Thần đạo. Đây là một phần của Di sản...</p>
 										<div class="clr"></div>
 									</div>
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Trọng tài - vết đen của kỳ World Cup sôi động </a>
+										<a href="chitiet.html" title="">Cây cầu lớn Seto Naikai</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h2.jpg" alt="" /></a>
-										<p>World Cup 2014 chưa đi hết lượt đầu vòng bảng nhưng các trọng tài đẳng cấp
-											FIFA đã có tới bốn trận bị chỉ trích dữ dội.</p>
+										<a href="chitiet.html" title=""><img src="images/tmp/h2.jpg" alt="" /></a>
+										<p>Người ta có thể đáp xe lửa nhanh chóng từ Hokkaido lạnh như Sibir, xuyên qua
+											Honshu đến bến cảng Kyushu khí hậu á nhiệt đới và đền miếu...</p>
 										<div class="clr"></div>
 									</div>
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Những mỹ nhân Việt duyên dáng ở tuổi tứ tuần</a>
+										<a href="chitiet.html" title="">Những bảo tàng có một không hai ở Nhật Bản</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h4.jpg" alt="" /></a>
-										<p>Để bảo vệ giàn khoan, Trung Quốc đã điều thêm 17 tàu các loại so với hôm
-											trước, sẵn sàng đâm va vào tàu Việt Nam.</p>
+										<a href="chitiet.html" title=""><img src="images/tmp/h4.jpg" alt="" /></a>
+										<p>Bảo tàng thuốc lá và muối hay bảo tàng Takoyaki chỉ là hai trong số nhiều bảo
+											tàng ấn tượng tại Nhật Bản sẽ góp phần làm chuyến đi...</p>
 										<div class="clr"></div>
 									</div>
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Chuyển nhượng 17/6: Arsenal mua Balotelli, tráo hàng Man
-											Utd</a>
+										<a href="chitiet.html" title="">Dấu ấn hữu nghị Hà Nội - Fukuoka</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h5.jpg" alt="" /></a>
-										<p>Đội bóng thành London đang đẩy mạnh việc tuyển lựa những vị trí còn yếu trong
-											đội hình ở cả ba tuyến.</p>
+										<a href="chitiet.html" title=""><img src="images/tmp/h5.jpg" alt="" /></a>
+										<p>Trong khuôn khổ “Những ngày Fukuoka tại Hà Nội”, một loạt sự kiện văn hóa
+											Nhật Bản đặc sắc đã để lại dấu ấn tốt đẹp cho...</p>
 										<div class="clr"></div>
 									</div>
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Chuyên gia Anh tin chắc vị trí MH370 rơi</a>
+										<a href="chitiet.html" title="">Cải cách để thu hút vốn đầu tư Nhật Bản</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
-										<p>Các chuyên gia thuộc công ty viễn thông Anh Inmarsat cho rằng họ xác định
-											được vị trí chiếc máy bay MH370 đã rơi xuống trên Ấn Độ Dương, tuy nhiên
-											đội.</p>
+										<a href="chitiet.html" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
+										<p>Sáng 5-9 tại Hà Nội diễn ra Diễn đàn Kinh tế cấp cao Việt Nam - Nhật Bản 2013
+											(VJES). Đây là hoạt động nhân kỷ niệm 40 năm quan hệ...</p>
 										<div class="clr"></div>
 									</div>
 								</li>
