--- a/chitiet.html
+++ b/chitiet.html
@@ -65,12 +65,12 @@
 							<ul>
 								<li>
 									<h2>
-										<a href="detail.php?id=1"
+										<a href="chitiet.html"
 											title="Trung Quốc điều thêm 17 tàu đến khu vực giàn khoan">Trung Quốc điều
 											thêm 17 tàu đến khu vực giàn khoan</a>
 									</h2>
 									<div class="item">
-										<a href="detail.php?id=1"
+										<a href="chitiet.html"
 											title="Trung Quốc điều thêm 17 tàu đến khu vực giàn khoan"><img
 												src="images/tmp/h1.jpg"
 												alt="Trung Quốc điều thêm 17 tàu đến khu vực giàn khoan"></a>
@@ -81,12 +81,12 @@
 								</li>
 								<li>
 									<h2>
-										<a href="detail.php?id=2"
+										<a href="chitiet.html"
 											title="Trọng tài - vết đen của kỳ World Cup sôi động ">Trọng tài - vết đen
 											của kỳ World Cup sôi động </a>
 									</h2>
 									<div class="item">
-										<a href="detail.php?id=2"
+										<a href="chitiet.html"
 											title="Trọng tài - vết đen của kỳ World Cup sôi động "><img
 												src="images/tmp/h2.jpg"
 												alt="Trọng tài - vết đen của kỳ World Cup sôi động "></a>
