--- a/danhmuc.html
+++ b/danhmuc.html
@@ -38,10 +38,11 @@
 							<ul>
 								<li>
 									<h2>
-										<a href="" title="">Trung Quốc điều thêm 17 tàu đến khu vực giàn khoan</a>
+										<a href="chitiet.html" title="">Trung Quốc điều thêm 17 tàu đến khu vực giàn
+											khoan</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
+										<a href="chitiet.html" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
 										<p>Để bảo vệ giàn khoan, Trung Quốc đã điều thêm 17 tàu các loại so với hôm
 											trước, sẵn sàng đâm va vào tàu Việt Nam.</p>
 										<div class="clr"></div>
@@ -49,10 +50,11 @@
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Trọng tài - vết đen của kỳ World Cup sôi động </a>
+										<a href="chitiet.html" title="">Trọng tài - vết đen của kỳ World Cup sôi động
+										</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h2.jpg" alt="" /></a>
+										<a href="chitiet.html" title=""><img src="images/tmp/h2.jpg" alt="" /></a>
 										<p>World Cup 2014 chưa đi hết lượt đầu vòng bảng nhưng các trọng tài đẳng cấp
 											FIFA đã có tới bốn trận bị chỉ trích dữ dội.</p>
 										<div class="clr"></div>
@@ -60,10 +62,10 @@
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Những mỹ nhân Việt duyên dáng ở tuổi tứ tuần</a>
+										<a href="chitiet.html" title="">Những mỹ nhân Việt duyên dáng ở tuổi tứ tuần</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h4.jpg" alt="" /></a>
+										<a href="chitiet.html" title=""><img src="images/tmp/h4.jpg" alt="" /></a>
 										<p>Để bảo vệ giàn khoan, Trung Quốc đã điều thêm 17 tàu các loại so với hôm
 											trước, sẵn sàng đâm va vào tàu Việt Nam.</p>
 										<div class="clr"></div>
@@ -71,11 +73,12 @@
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Chuyển nhượng 17/6: Arsenal mua Balotelli, tráo hàng Man
+										<a href="chitiet.html" title="">Chuyển nhượng 17/6: Arsenal mua Balotelli, tráo
+											hàng Man
 											Utd</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h5.jpg" alt="" /></a>
+										<a href="chitiet.html" title=""><img src="images/tmp/h5.jpg" alt="" /></a>
 										<p>Đội bóng thành London đang đẩy mạnh việc tuyển lựa những vị trí còn yếu trong
 											đội hình ở cả ba tuyến.</p>
 										<div class="clr"></div>
@@ -83,10 +86,10 @@
 								</li>
 								<li>
 									<h2>
-										<a href="" title="">Chuyên gia Anh tin chắc vị trí MH370 rơi</a>
+										<a href="chitiet.html" title="">Chuyên gia Anh tin chắc vị trí MH370 rơi</a>
 									</h2>
 									<div class="item">
-										<a href="" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
+										<a href="chitiet.html" title=""><img src="images/tmp/h1.jpg" alt="" /></a>
 										<p>Các chuyên gia thuộc công ty viễn thông Anh Inmarsat cho rằng họ xác định
 											được vị trí chiếc máy bay MH370 đã rơi xuống trên Ấn Độ Dương, tuy nhiên
 											đội.</p>
