--- a/client/index.html
+++ b/client/index.html
@@ -10,27 +10,13 @@
 <body>
 	<div class="main">
 		<div class="page">
-			<div class="header">
-				<div class="header-img">
-					<img src="images/header.jpg" alt="" width="800">
-				</div>
-				<div class="topmenu">
-					<ul>
-						<li><a href="index.html">Trang chủ</a></li>
-						<li><a href="tintuc.html">Tin tức</a></li>
-					</ul>
-				</div>
-			</div>
+
+			<div class="header"> </div>
+
 			<div class="content">
-				<div class="leftpanel">
-					<h2>Danh mục tin</h2>
-					<ul>
-						<li><a href="danhmuc.html">Thời sự</a></li>
-						<li><a href="danhmuc.html">Góc nhìn</a></li>
-						<li><a href="danhmuc.html">Thế giới</a></li>
-						<li><a href="danhmuc.html">Kinh doanh</a></li>
-					</ul>
-				</div>
+
+				<div class="leftpanel"></div>
+
 				<div class="rightpanel">
 					<div class="rightbody">
 						<h1 class="title">Giới thiệu về chúng tôi</h1>
@@ -49,11 +35,20 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="footer">
-				<p>Trung tâm đào tạo Lập trình viên VinaEnter EDU</p>
+
 			</div>
 		</div>
 	</div>
+	<script src="lib/jquery-3.6.3.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$(".header").load("./inc/header.html");
+			$(".leftpanel").load("./inc/leftpanel.html");
+			$(".footer").load("./inc/footer.html");
+		});
+	</script>
 </body>
 
 </html>
