--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
 		</div>
 	</div>
 	<script src="lib/jquery-3.6.3.min.js"></script>
+	<script src="lib/axios.min.js"></script>
 	<script>
 		$(document).ready(function () {
 			$(".header").load("./inc/header.html");
