--- a/client/chitiet.html
+++ b/client/chitiet.html
@@ -23,31 +23,7 @@
 
 						<h2 class="title" style="margin-top:30px;color:#BBB">Tin tức liên quan</h2>
 						<div class="items-new">
-							<ul>
-								<li>
-									<h2>
-										<a href="chitiet.html" title="">Những bảo tàng có
-											một không hai ở Nhật Bản</a>
-									</h2>
-									<div class="item">
-										<a href="chitiet.html" title=""><img src="images/tmp/h1.jpg" alt=""></a>
-										<p>Bảo tàng thuốc lá và muối hay bảo tàng Takoyaki chỉ là hai trong số nhiều bảo
-											tàng ấn tượng tại Nhật Bản sẽ góp phần làm chuyến đi...</p>
-										<div class="clr"></div>
-									</div>
-								</li>
-								<li>
-									<h2>
-										<a href="chitiet.html" title="">Dấu ấn hữu nghị Hà
-											Nội - Fukuoka</a>
-									</h2>
-									<div class="item">
-										<a href="chitiet.html" title=""><img src="images/tmp/h2.jpg" alt=""></a>
-										<p>Trong khuôn khổ “Những ngày Fukuoka tại Hà Nội”, một loạt sự kiện văn hóa
-											Nhật Bản đặc sắc đã để lại dấu ấn tốt đẹp cho...</p>
-										<div class="clr"></div>
-									</div>
-								</li>
+							<ul id="list-related">
 							</ul>
 						</div>
 					</div>
