--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 	<div class="main">
 		<div class="page">
 
-			<div class="header"> </div>
+			<div class="header"></div>
 
 			<div class="content">
 
@@ -36,9 +36,7 @@
 				</div>
 			</div>
 
-			<div class="footer">
-
-			</div>
+			<div class="footer"></div>
 		</div>
 	</div>
 	<script src="lib/jquery-3.6.3.min.js"></script>
